--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koyoh-orbitaltrajectory-desktop",
-  "productName": "KOYOH OrbitalTrajectory",
+  "name": "koyoh-motion-visualizar-desktop",
+  "productName": "KOYOH-MotionVisualizar",
   "version": "1.0.0",
   "description": "The application can visualize the orbital and attitude motion of satellites on the virtual earth globe.",
   "author": "Kaiji Takeuchi",
@@ -8,10 +8,40 @@
   "scripts": {
     "start": "electron ."
   },
+  "build": {
+    "appId": "com.electron.koyoh-motion-visualizar-desktop",
+    "copyright": "Copyright © 2023 Kaiji Takeuchi",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "resource",
+      "src",
+      "package.json",
+      "package-lock.json"
+    ],
+    "mac": {
+      "icon": "resource/image/icon_mac.icns",
+      "target": [
+        "dmg"
+      ]
+    },
+    "win": {
+      "icon": "resource/image/icon_win.ico",
+      "target": "nsis"
+    },
+    "nsis":{
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
   "license": "ISC",
   "devDependencies": {
     "cesium": "^1.103.0",
     "electron": "^23.2.1",
     "electron-builder": "^23.6.0"
+  },
+  "dependencies": {
+    "cesium": "^1.103.0"
   }
 }
